--- a/.bzrignore
+++ b/.bzrignore
@@ -1,12 +1,24 @@
+# ignore rules
+
+# the default build locations
+builds
+products
+
+# auctex lint
 doc/**/auto
+# tex lint
 doc/**/*.aux
 doc/**/*.bbl
 doc/**/*.blg
 doc/**/*.log
 doc/**/*.nav
 doc/**/*.out
-doc/**/*.pdf
 doc/**/*.snm
 doc/**/*.toc
 doc/**/*.vrb
+# ignore pdfs
+doc/**/*.pdf
+# but not those that are figures
+!doc/**/figures/*.pdf
 
+# end of file
